welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:0: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:2: error: not found: type Yellow
setCouleurBrosse(c:Yellow)
                   ^