welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
setCouleurBrosse(c:Yellow)
leveBrosse();
avance();
baisseBrosse();

